fixed overflow y not scrolling

--- a/src/components/dashDisplays/Chat.module.css
+++ b/src/components/dashDisplays/Chat.module.css
@@ -4,8 +4,8 @@
     background-color: bisque;
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
     overflow: scroll;
+    overflow-x: hidden
 }
 .chatFooter{
     align-self: center;
